# callmind

./: .env.example  .gitignore  Dockerfile  README.md  SUBMISSION.md  deploy.sh  docker-compose.yml  pyproject.toml
callmind/: __init__.py  app.py  config.py  memory.py  video_pipeline.py
callmind/static/: style.css
callmind/templates/: base.html  client.html  demo.html  explore.html  index.html  prep.html  processing.html  registered.html
skill/: README.md  SKILL.md  shipables.json
